# AIBacklogV4_MCP_1

./: .cursorrules  AGENT_ARCHITECTURE.md  AGENT_IMPLEMENTATION_PLAN.md  ANALYSIS_COMPLETE.md  DOCUMENTATION_UPDATES_COMPLETE.md  FILE_STRUCTURE.md  MASTER_PLAN.md  MICROSOFT_FRAMEWORK_INTEGRATION_SUMMARY.md  ORGANIZATION_COMPLETE.md  PRE_FLIGHT_CHECKLIST.md  PROJECT_STATUS.md  README.md  START_HERE.md  cursor_prompt.txt  dev.sh  pyproject.toml  setup.sh
.claude/: settings.local.json
docs/: README.md
docs/archive/: jira_mcp_dev_plan.md
docs/guides/: ARCHITECTURE_CHANGES.md  DOCUMENT_ORGANIZATION.md  FINAL_ORGANIZATION_SUMMARY.md  MICROSOFT_AGENT_FRAMEWORK_ANALYSIS.md  TECHNICAL_REVIEW.md
docs/reference/: ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION.md  PHASED_APPROACH.md
docs/specs/: API_CONTRACTS.md  TESTING_STRATEGY.md
